--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,34 @@
 {
   "HomePage": {
-    "heading": "Nice work on building a Shopify app 🎉"
+    "heading": "Nice work on building a Shopify app 🎉",
+    "learnMore": "Learn more about building out your app in <2>this Shopify tutorial</2> 📚",
+    "startPopulatingYourApp": "Ready to go? Start populating your app with some sample products to view and test in your store.",
+    "title": "App name",
+    "trophyAltText": "Nice work on building a Shopify app",
+    "yourAppIsReadyToExplore": "Your app is ready to explore! It contains everything you need to get started including the <2>Polaris design system</2>, <5>Shopify Admin API</5>, and <8>App Bridge</8> UI library and components."
+  },
+  "NavigationMenu": {
+    "pageName": "Page name"
+  },
+  "NotFound": {
+    "description": "Check the URL and try again, or use the search bar to find what you need.",
+    "heading": "There is no page at this address"
+  },
+  "PageName": {
+    "body": "Body",
+    "heading": "Heading",
+    "primaryAction": "Primary action",
+    "secondaryAction": "Secondary action",
+    "title": "Page name"
+  },
+  "ProductsCard": {
+    "description": "Sample products are created with a default title and price. You can remove them at any time.",
+    "errorCreatingProductsToast": "There was an error creating products",
+    "populateProductsButton_one": "Populate {{count}} product",
+    "populateProductsButton_other": "Populate {{count}} products",
+    "productsCreatedToast_one": "{{count}} product created!",
+    "productsCreatedToast_other": "{{count}} products created!",
+    "title": "Product Counter",
+    "totalProductsHeading": "TOTAL PRODUCTS"
   }
 }
